# dashboard_spese

./: .gitignore  DOCUMENTATION.md  README.md  main.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
src/: config.py  models.py  services.py
