[project]
name = "dashboard-spese"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-auth>=2.47.0",
    "gspread>=6.2.1",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
    "streamlit>=1.53.0",
]
